# tablescript

./: CMakeLists.txt  LICENSE  README.md
include/: alignment.hpp  border.hpp  border_style.hpp  cell.hpp  cell_content.hpp  cell_style.hpp  excess_over_range.hpp  range_functions.hpp  table.hpp  table_auto_formatter.hpp  table_builder.hpp  table_executor.hpp  table_height_sizer.hpp  table_lexer.hpp  table_parser.hpp  table_printer.hpp  table_row.hpp  table_width_sizer.hpp  table_word_wrapper.hpp  token.hpp  token_type.hpp  util.hpp  vec2.hpp
src/: alignment.cpp  border.cpp  cell_style.cpp  excess_over_range.cpp  main.cpp  range_functions.cpp  table.cpp  table_auto_formatter.cpp  table_builder.cpp  table_executor.cpp  table_height_sizer.cpp  table_lexer.cpp  table_parser.cpp  table_printer.cpp  table_row.cpp  table_width_sizer.cpp  table_word_wrapper.cpp  token.cpp  util.cpp
tests/: run.sh
tests/test1/: input.tbl  output
tests/test10/: input.tbl  output
tests/test2/: input.tbl  output
tests/test3/: input.tbl  output
tests/test4/: input.tbl  output
tests/test5/: input.tbl  output
tests/test6/: input.tbl  output
tests/test7/: input.tbl  output
tests/test8/: input.tbl  output
tests/test9/: input.tbl  output
